--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
-  "name": "blake-stack",
+  "name": "money-trakr",
   "private": true,
   "sideEffects": false,
   "scripts": {
+    "prebuild": "npm run db:generate && npm run db:deploy",
     "build": "run-s build:*",
-    "build:css": "npm run generate:css -- --minify",
+    "build:css": "postcss styles --base styles --dir app/styles --env production",
     "build:remix": "remix build",
     "dev": "run-p dev:*",
-    "dev:css": "npm run generate:css -- --watch",
+    "dev:css": "postcss styles --base styles --dir app/styles -w",
     "dev:remix": "cross-env NODE_ENV=development binode --require ./mocks -- @remix-run/dev:remix dev",
     "docker": "docker-compose up -d",
     "format": "prettier --write .",
@@ -30,15 +31,22 @@
     "/public/build"
   ],
   "dependencies": {
+    "@heroicons/react": "^2.0.11",
     "@prisma/client": "^4.3.1",
+    "@radix-ui/react-popover": "^1.0.0",
+    "@radix-ui/react-radio-group": "^1.0.0",
+    "@radix-ui/react-select": "^1.0.0",
     "@remix-run/node": "^1.7.0",
     "@remix-run/react": "^1.7.0",
     "@remix-run/vercel": "^1.7.0",
     "@vercel/node": "^2.5.14",
     "bcryptjs": "^2.4.3",
+    "clsx": "^1.2.1",
+    "date-fns": "^2.29.3",
     "isbot": "^3.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "remix-typedjson": "^0.1.2",
     "tiny-invariant": "^1.2.0"
   },
   "devDependencies": {
@@ -71,6 +79,8 @@
     "msw": "^0.45.0",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.16",
+    "postcss-cli": "^10.0.0",
+    "postcss-import": "^15.0.0",
     "prettier": "2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
     "prisma": "^4.3.1",
