add prisma script tags

--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
     "dev:css": "postcss styles --base styles --dir app/styles -w",
     "dev:remix": "cross-env NODE_ENV=development binode --require ./mocks -- @remix-run/dev:remix dev",
     "docker": "docker-compose up -d",
+    "db:migrate": "prisma migrate dev",
+    "db:deploy": "prisma migrate deploy",
+    "db:reset": "prisma migrate reset",
+    "db:generate": "prisma generate",
+    "db:seed": "prisma db seed",
     "format": "prettier --write .",
     "generate:css": "tailwindcss -o ./app/styles/tailwind.css",
     "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint .",
