--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
   "dependencies": {
     "@heroicons/react": "^2.0.11",
     "@prisma/client": "^4.3.1",
-    "@radix-ui/react-popover": "^1.0.0",
+    "@radix-ui/react-dialog": "^1.0.0",
     "@radix-ui/react-radio-group": "^1.0.0",
     "@radix-ui/react-select": "^1.0.0",
     "@remix-run/node": "^1.7.0",
@@ -48,6 +48,7 @@
     "bcryptjs": "^2.4.3",
     "clsx": "^1.2.1",
     "date-fns": "^2.29.3",
+    "framer-motion": "^7.4.0",
     "isbot": "^3.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
