--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
   "dependencies": {
     "@heroicons/react": "^2.0.11",
     "@prisma/client": "^4.3.1",
+    "@radix-ui/react-aspect-ratio": "^1.0.1",
     "@radix-ui/react-dialog": "^1.0.0",
+    "@radix-ui/react-popover": "^1.0.2",
     "@radix-ui/react-radio-group": "^1.0.0",
     "@radix-ui/react-select": "^1.0.0",
     "@remix-run/node": "^1.7.0",
@@ -52,11 +54,12 @@
     "isbot": "^3.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-use-measure": "^2.1.1",
     "remix-typedjson": "^0.1.2",
     "tiny-invariant": "^1.2.0"
   },
   "devDependencies": {
-    "@faker-js/faker": "^7.4.0",
+    "@faker-js/faker": "^7.6.0",
     "@remix-run/dev": "^1.7.0",
     "@remix-run/eslint-config": "^1.7.0",
     "@remix-run/serve": "^1.7.0",
