--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "bcryptjs": "^2.4.3",
     "clsx": "^1.2.1",
     "date-fns": "^2.29.3",
+    "date-fns-tz": "^1.3.7",
     "framer-motion": "^7.4.0",
     "isbot": "^3.5.1",
     "react": "^18.2.0",
